# titusSimulator-v0.1

./: .env.example  .gitignore  BUILD_SUMMARY.md  CONVERTER_QUICKSTART.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GETTING_STARTED.md  Makefile  NGRS_API_INTEGRATION.md  PROJECT_COMPLETION.md  QUICKSTART.md  QUICKSTART_DEPLOYMENT.md  QUICK_SSL_SETUP.md  README.md  ROSTERFILEID_WORKFLOW.md  UI_BUILD_SUMMARY.md  UI_GUIDE.md  USAGE.md  anthony_macpro.pem  converted_roster.json  output.json  pyproject.toml  requirements.txt  roster_converter.py  rosterdata_0412_001.json  sample_roster.json  start.sh  start_ui.sh  streamlit_ui.py  test_components.py
deployment/: deploy.sh  nginx.conf  setup-ssl.sh  titus-simulator.service  titus-streamlit.service
docs/: CONVERTER_GUIDE.md
implementation_docs/: JSON_SCHEMAS.md
implementation_docs/archive/: prompts_for_startofdevelopment.md
implementation_docs/deployment/: DEPLOYMENT.md  DOMAIN_SSL_SETUP.md  QUICKSTART_DEPLOYMENT.md
implementation_docs/guides/: GETTING_STARTED.md  QUICKSTART.md  UI_GUIDE.md  USAGE.md
postman/: README.md  Titus_Simulator.postman_environment.json  Titus_Simulator_API.postman_collection.json  Titus_Simulator_Production.postman_environment.json
src/titus_simulator/: __init__.py  api.py  clocking_client.py  config.py  models.py  roster_client.py  scheduler.py  simulation_mode.py  simulator.py  state_store.py
